--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -28,13 +28,13 @@
     margin-right: 16px;
 }
 
-/*-----FORM------*/
+/*-----FORM CADASTRO------*/
 form {
     background-color: white;
     padding: 64px;
     border-radius: 8px;
     margin: 0 auto;
-    margin-top: 80px;
+    margin-top: 42px;
     max-width: 730px;
 }
 
@@ -68,7 +68,7 @@ form .field-group {
 
 form input,
 .field select {
-    background-color: #f0f0f5;
+    background-color: var(--background-color);
     border: 1px solid #dddddd;
     border-radius: 4px;
     padding: 16px 24px;
@@ -107,3 +107,43 @@ form button {
 form button:hover {
     background-color: #2fb86e;
 } 
+
+/*-----FORM ITENS GRID------*/
+.itens-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+}
+
+.itens-grid li {
+    height: 180px;
+    background-color: #f5f5f5;
+    list-style: none;
+    border: 2px solid #f5f5f5;
+    border-radius: 8px;
+    padding: 32px 24px 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    cursor: pointer;
+}
+
+.itens-grid li span {
+    margin-top: 12px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    color: var(--title-color);
+}
+
+.itens-grid li.selected {
+    background: #e1feec;
+    border: 2px solid #34cb79;
+}
+
+.itens-grid li span,
+.itens-grid li img {
+    pointer-events: none;
+}
