--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -11,7 +11,7 @@
     <div class="content">
 
         <header>
-            <a href="/"><img src="/assets/logo.svg" alt="Logomarca"></a>
+            <img src="/assets/logo.svg" alt="Logomarca">
             <a href="/create-point">
                 <span></span>
                 Cadastrar um ponto de coleta
