--- a/src/app/views/results.njk
+++ b/src/app/views/results.njk
@@ -13,35 +13,32 @@
     {% include 'partials/page-header.njk' %}
 
     <main>
-        <h4>
-            <strong>2 pontos</strong>
+
+        {% if total > 0 %}
+             <h4>
+            <strong>{{total}} pontos</strong>
             encontrados
         </h4>
         <div class="cards">
+            {% for place in places %}
             <div class="card">
-                <img src="https://bit.ly/3gQ5wBQ" alt="Colectoria">
-                <h1>Colectoria</h1>
-                <h3>Resíduos Eletrônicos, Lâmpadas</h3>
+                <img src="{{place.image}}" alt="Imagem de {{place.name}}">
+                <h1>{{place.name}}</h1>
+                <h3>{{place.itens}}</h3>
                 <p>
-                    Rio do Sul, Santa Catarina
+                    {{place.city}}, {{place.state}}
                     <br/>
-                    Guilherme Gemballa, Jardim América
+                    {{place.address}}
                     <br/>
-                    N° 260
+                    {{place.address2}}
                 </p>
             </div>
-            <div class="card">
-                <img src="https://bit.ly/3dv4pW9" alt="Papersider">
-                <h1>Papersider</h1>
-                <h3>Papéis e Papelão</h3>
-                <p>
-                    Rio do Sul, Santa Catarina
-                    <br/>
-                    Guilherme Gemballa, Jardim América
-                    <br/>
-                    N° 260
-                </p>
-            </div>
+            {% endfor %}
         </div>
+        {%else%}
+        <h4><strong>Nenhum</strong> local encontrado</h4>
+        {% endif %}
+
+       
     </main>
 {% endblock content %}
