--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -73,3 +73,14 @@
     display: none;
     visibility: hidden;
 }
+
+#modal.point .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#modal.point h1 {
+    color: white;
+    margin-top: 20px;
+}
