--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -1,6 +1,6 @@
-@media (max-width: 900px) {
+@media (max-width: 960px) {
     #page-home {
-        background-position-x: 100vw;
+        background-position-x: 100vw!important;
     }
 
     #page-home .content {
@@ -41,7 +41,7 @@
 @media (max-height: 1000px) {
     #page-home {
         background-position-y: 24vh;
-        background-size: 48%;
+        background-size: 60%;
         
     }
 }
