--- a/src/app/views/create-point.njk
+++ b/src/app/views/create-point.njk
@@ -4,6 +4,7 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/styles/create-point.css">
+    <link rel="stylesheet" href="/styles/modal.css">
 {% endblock styles %}
 {% block title %}
     <title>Criar um ponto de coleta</title>
@@ -12,7 +13,7 @@
 {% block content %}
     {% include 'partials/page-header.njk' %}
 
-    <form action="">
+    <form action="/savepoint" method="POST">
 
         <h1>Cadastro do ponto de coleta</h1>
         <fieldset>
@@ -35,7 +36,7 @@
             <div class="field-group">
                 <div class="field">
                     <label for="address">Endereço</label>
-                    <input type="text" name="addres" required="required">
+                    <input type="text" name="address" required="required">
                 </div>
                 <div class="field">
                     <label for="address2">Número/Complemento</label>
@@ -66,27 +67,27 @@
                 <span>Selecione um ou mais itens</span>
             </legend>
             <div class="itens-grid">
-                <li data-id="1">
+                <li data-id="Lâmpadas">
                     <img src="/assets/lampadas.svg" alt="Lâmpadas">
                     <span>Lâmpadas</span>
                 </li>
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
-                <li data-id="3">
+                <li data-id="Papéis e Papelão">
                     <img src="/assets/papeis-papelao.svg" alt="Papéis e Papelão">
                     <span>Papéis e Papelão</span>
                 </li>
-                <li data-id="4">
+                <li data-id="Resíduos Eletrônicos">
                     <img src="/assets/eletronicos.svg" alt="Resíduos Eletrônicos">
                     <span>Resíduos Eletrônicos</span>
                 </li>
-                <li data-id="5">
+                <li data-id="Resíduos Orgânicos">
                     <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
-                <li data-id="6">
+                <li data-id="Óleo de Cozinha">
                     <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
                     <span>Óleo de Cozinha</span>
                 </li>
@@ -100,7 +101,15 @@
 
     </form>
 
+{% endblock content %}
+
+       {% block modal %}
+            {% if saved %}
+                {% include 'partials/point-created.njk' %}
+            {% endif %}
+       {% endblock modal %} 
+    
+
     {% block script %}
         <script src="/scripts/create-point.js"></script>
     {% endblock script %}
-{% endblock content %}
