--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles/main.css">
         <link rel="stylesheet" href="/styles/responsive.css">
+        <link rel="icon" href="https://bit.ly/2AJcvfz" type="image/x-icon">
         {% block styles %}{% endblock styles %}
         {% block title %}
             <title>Ecoleta</title>
