--- a/src/app/views/partials/modal.njk
+++ b/src/app/views/partials/modal.njk
@@ -7,7 +7,7 @@
         <form action="/results">
             <label for="search">Cidade</label>
             <div class="search field">
-                <input type="text" name="search" placeholder="Pesquise por cidade">
+                <input type="text" name="search" required placeholder="Pesquise por cidade">
                 <button>
                     <img src="/assets/search.svg" alt="Botão">
                 </button>
