--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -112,6 +112,7 @@ form button {
     border: 0;
     margin-top: 40px;
     transition: background-color 400ms;
+    cursor: pointer;
 }
 
 form button:hover {
