--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -20,7 +20,7 @@
 
         <main>
             <h1>Seu marketplace de coleta de resíduos</h1>
-            <p>Ajudamos pessoas a encontrarem pontos de coleta eficiente</p>
+            <p>Ajudamos pessoas a encontrarem pontos de coleta eficientes</p>
             <a href="#">
                 <span></span>
                 <strong>Pesquisar pontos de coleta</strong>
